[gd_scene load_steps=11 format=3 uid="uid://g2q2oievy6js"]

[ext_resource type="Script" path="res://Levels/stage_1.gd" id="1_tpf70"]
[ext_resource type="Shader" path="res://Sprites/BackgroundShader.gdshader" id="2_4kpp0"]
[ext_resource type="Texture2D" uid="uid://brywkx4mth0oy" path="res://Sprites/Background/universe_background.webp" id="3_qrsny"]
[ext_resource type="Texture2D" uid="uid://cjqu0ce3jijfw" path="res://Sprites/Background/earth.png" id="4_t6pal"]
[ext_resource type="PackedScene" uid="uid://cvn2ttnt65nx5" path="res://Characters/quokka/quokka.tscn" id="5_ff48i"]
[ext_resource type="PackedScene" uid="uid://3muihwqelhxo" path="res://Characters/enemy/enemy_manager.tscn" id="6_2hjbd"]
[ext_resource type="PackedScene" uid="uid://c8r7bpvfojmgx" path="res://Characters/enemy/crab/crab.tscn" id="7_cq68j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grmxi"]
shader = ExtResource("2_4kpp0")
shader_parameter/dimensions = Vector2(1024, 600)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.5
shader_parameter/small_stars_near_size = 1.0
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.5
shader_parameter/large_stars_near_size = 1.0
shader_parameter/far_stars_color = Color(0.5, 0, 1, 1)
shader_parameter/near_stars_color = Color(1, 1, 1, 1)
shader_parameter/base_scroll_speed = 0.05
shader_parameter/additional_scroll_speed = 0.05

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nrqd"]
bg_color = Color(0.709041, 0.107031, 0.518971, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ilgh"]
bg_color = Color(0.157025, 0.0835905, 0.0339797, 1)

[node name="Stage 2" type="Node2D"]
script = ExtResource("1_tpf70")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="BackgroundShader" type="Sprite2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_grmxi")
position = Vector2(961, 565)
scale = Vector2(2.17417, 2.17417)
texture = ExtResource("3_qrsny")

[node name="Earth" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 535)
scale = Vector2(0.0882504, 0.0882504)
texture = ExtResource("4_t6pal")

[node name="Player" parent="." instance=ExtResource("5_ff48i")]
position = Vector2(960, 539)

[node name="EnemyManager" parent="." instance=ExtResource("6_2hjbd")]
position = Vector2(973, 532)
enemyMax = 0

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 0.811765)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 156
text = "Game Over"

[node name="Retry" type="Button" parent="GameOver/ColorRect"]
process_mode = 2
layout_mode = 0
offset_left = 920.0
offset_top = 654.0
offset_right = 1046.0
offset_bottom = 726.0
theme_override_font_sizes/font_size = 46
theme_override_styles/hover = SubResource("StyleBoxFlat_2nrqd")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ilgh")
text = "Retry"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -97.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 66
text = "0"
horizontal_alignment = 2

[node name="DistanceLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
offset_right = 299.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 36
text = "Distance to Earth: 0.002569 au"

[node name="Countdown" type="Timer" parent="HUD"]
unique_name_in_owner = true
wait_time = 300.0
one_shot = true
autostart = true

[node name="Enemy" parent="." instance=ExtResource("7_cq68j")]
position = Vector2(110, -6.00005)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="GameOver/ColorRect/Retry" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="HUD/Countdown" to="." method="_on_countdown_timeout"]
